added public privacy policy for Google OAuth

--- a/frontend/public/privacy.html
+++ b/frontend/public/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - [Organization Name]</title>
+  <title>Privacy Policy - Career Foundation Hub</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -23,7 +23,7 @@
 <body>
   <h1>Privacy Policy</h1>
 
-  <p>This blog, run by <strong>[Organization Name]</strong>, allows users to sign in with Google to import documents from Google Drive.</p>
+  <p>This blog, run by <strong>Career Foundation Hub</strong>, allows users to sign in with Google to import documents from Google Drive.</p>
 
   <h2>Information Collected</h2>
   <ul>
@@ -38,7 +38,7 @@
   <p>We use Google OAuth for authentication. By signing in, you consent to Google’s handling of your information as described in their policies.</p>
 
   <h2>Contact</h2>
-  <p>If you have questions about this privacy policy, contact us at: <a href="mailto:organization@example.com">organization@example.com</a></p>
+  <p>If you have questions about this privacy policy, contact us at: <a href="mailto:cmkhoa2006@gmail.com">cmkhoa2006@gmail.com</a></p>
 
 </body>
 </html>
